# cppli

./: .codecov.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: github-build.yml
cmake/: check_for_cpp_support.cmake  tools.cmake
examples/: CMakeLists.txt
examples/readme_example_cpp17_1/: CMakeLists.txt  readme_example_cpp17_1.cpp
examples/readme_example_cpp17_2/: CMakeLists.txt  readme_example_cpp17_2.cpp
examples/readme_example_cpp20/: CMakeLists.txt  readme_example_cpp20.cpp
include/cppli/: cppli.hpp
tests/: CMakeLists.txt  cppli_tests.cpp  cppli_tests.hpp
